--- a/Osc.Dejection.Sample/Views/Test1View.xaml
+++ b/Osc.Dejection.Sample/Views/Test1View.xaml
@@ -11,6 +11,6 @@
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
         <Label Grid.Row="0" Content="TEST 1" FontSize="50"></Label>
-        <Button Grid.Row="1" Content="Show Dialog" Height="50" Command="{Binding ShowDialogCommand}"></Button>
+        <Button Grid.Row="1" Content="Show Dialog" Height="50" Width="Auto" Command="{Binding ShowDialogCommand}"></Button>
     </Grid>
 </UserControl>
