--- a/Osc.Dejection.Sample/Views/Test2View.xaml
+++ b/Osc.Dejection.Sample/Views/Test2View.xaml
@@ -10,9 +10,11 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
         <Label Grid.Row="0" Content="Test 2" FontSize="50"></Label>
-        <Button Grid.Row="1" Content="Navigate to Test 1" Height="50" Command="{Binding NavigateCommand}"></Button>
+        <Button Grid.Row="1" Content="Navigate to Test 1" Height="50" Width="Auto" Command="{Binding NavigateCommand}"></Button>
+        <Button Grid.Row="2" Content="Show Message Dialog" Height="50" Width="Auto"  Command="{Binding MessageDialogCommand}"></Button>
     </Grid>
 </UserControl>
